src/App.css
html {
  scroll-padding-top: 53px; /* height of sticky header */
}

.app {
  font-size: 14px;

  height: max(100%, 100vh);

  background-color: #eee;
}

h2 {
  font-size: 1.5em;
  font-weight: 200;

  margin-top: 0;
  margin-bottom: 0.17em;
}

h3 {
  font-size: 1.2em;
  font-weight: 200;

  margin-top: 0.21em;
  margin-bottom: 0.21em;
}

.column {
  display: flex;
  flex-direction: column;
  border-right: 1px solid #000;
}

.column:last-child {
  flex-grow: 1;
  border-right: 0px;
}

.input-column {
  padding: 0.8em;

  background-color: #ccc;
}

.artifact-column {
  padding: 0;
  background-color: #ccc;
}

.stat-column {
  padding: 0;
}

.talent-column {
  padding: 0;
}

.input-block {
  display: flex;
  flex-direction: column;
  margin-bottom: 1em;
}

.input-block:last-child {
  margin-bottom: 0;
}

.input-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  column-gap: 0.5em;

  margin-top: 0.25em;
  margin-bottom: 0.25em;
}

.input-row > p {
  margin-top: 0;
  margin-bottom: 0;
}

.level-input {
  width: 3em;
}

.stat-input {
  width: 4em;
}

.save-name-col {
  max-width: 200px;
}

.dps-label-col {
  max-width: 200px;
}

.artifact-heading {
  padding: 0.8em;
}

.optimizer-card .card-header {
  padding: 0.8em;
}

.optimizer-card .card-body {
  padding-top: 0;
  padding-bottom: 0.8em;
  padding-left: 0.8em;
  padding-right: 0.8em;
}

label {
  margin-bottom: 0;
}

input[type='number'] {
  font-size: 1em;
  font-family: inherit;
  -moz-appearance: textfield;
}

.picker {
  width: auto;
  max-width: 250px;
}

.checkbox {
  padding-left: 0;
}

.checkbox > input[type='checkbox'] {
  margin-left: 0.25rem;
}

.result-block {
  display: flex;
  flex-direction: column;

  padding: 0.8em;
  border-bottom: 1px solid #000;
}

.sub-block {
  display: flex;
  flex-direction: column;

  padding-top: 0.5em;
  padding-bottom: 0.7em;

  border-bottom: 1px dashed #000;
}

.result-block:last-child,
.sub-block:last-child {
  border-bottom: 0px;
}

.result-block > p,
.result-block > img,
.sub-block > p,
.optimizer-card p {
  margin-top: 0.25em;
  margin-bottom: 0.25em;
}

.hidden {
  display: none;
}

/* Overriding Bootstrap styles */
.btn-group-sm > .btn,
.btn-sm {
  padding: 0rem 0.5rem;
}

.form-control-sm {
  height: calc(1.5em + 2px);
  padding: 0rem 0.25rem;
}

